[package]
name = "regex-filter-viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "regex-filter-viewer"
path = "src/main.rs"

[dependencies]
# GUI framework — same one used by large-text-viewer
eframe = "0.31"
egui   = "0.31"

# Regex engine — same one used by large-text-viewer's SearchEngine
regex = "1"

# Native file-open dialog
rfd = "0.15"

# ── When you integrate large-text-core ──────────────────────────────────────
# Uncomment these and delete the stub FileReader in app.rs.
#
# large-text-core = { git = "https://github.com/acejarvis/large-text-viewer" }
# memmap2 = "0.9"   # already a dep of large-text-core; listed here for clarity
