[package]
name = "rlogg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rlogg"
path = "src/main.rs"

[dependencies]
# GUI framework — same one used by large-text-viewer
eframe = "0.31"
egui   = "0.31"

# Regex engine — same one used by large-text-viewer's SearchEngine
regex = "1"

# Native file-open dialog
rfd = "0.15"

# encoding_rs needed to pass &'static Encoding to FileReader::new
encoding_rs = "0.8"

large-text-core = { git = "https://github.com/acejarvis/large-text-viewer" }
memmap2 = "0.9"   # already a dep of large-text-core; listed here for clarity
